# llm-nous

./: README.md  llm_deepseek.py  llm_nous.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_nous.py
