[project]
name = "llm-nous"
version = "0.1.0"
description = "Access Nous Research models via API"
readme = "README.md"
authors = [{name = "oldhead"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm"
]

[project.urls]
Homepage = "https://github.com/oldheadsouf/llm-nous"
Changelog = "https://github.com/oldheadsouf/llm-nous/releases"
Issues = "https://github.com/oldheadsouf/llm-nous/issues"
CI = "https://github.com/oldheadsouf/llm-nous/actions"

[project.entry-points.llm]
nous = "llm_nous"

[project.optional-dependencies]
test = ["pytest"]
